--- a/n/ne/new/newszoom.com.html
+++ b/n/ne/new/newszoom.com.html
@@ -1,10 +1,9 @@
-<!--The following is the downloaded HTML source of the newszoom.com privacy policy that was archived on 2005-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051212130722id_/http%3A//newszoom.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the newszoom.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615102022id_/http%3A//newszoom.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>NewsZoom.com Privacy Policy</title>
-<meta name="description" content="NewsZoom.com - leading latest news provider.">
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<meta name="description" content="NewsZoom.com - leading latest news provider."><meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <meta name="keywords" content="latest news, news, weather forecast, weather, finance, stock quotes, market">
 <style>
 		td {font-size:13px;font-family:Arial}
@@ -43,17 +42,6 @@ location.reload();
 if (NS4) onresize = reDo;
 //-->
 </script>
-<!-- FASTCLICK.COM POP-UNDER CODE v1.8 for newszoom.com (12 hour) -->
-<script language="javascript"><!--                                 
-var dc=document; var date_ob=new Date();
-dc.cookie='h2=o; path=/;';var bust=date_ob.getSeconds();
-if(dc.cookie.indexOf('e=llo') <= 0 && dc.cookie.indexOf('2=o') > 0){
-dc.write('<scr'+'ipt language="javascript" src="http://media.fastclick.net');
-dc.write('/w/pop.cgi?sid=23233&m=2&tp=2&v=1.8&c='+bust+'"></scr'+'ipt>');
-date_ob.setTime(date_ob.getTime()+43200000);
-dc.cookie='he=llo; path=/; expires='+ date_ob.toGMTString();} // -->
-</script>                                                          
-<!-- FASTCLICK.COM POP-UNDER CODE v1.8 for newszoom.com -->
 <meta http-equiv="refresh" content="300"></head><body topmargin="0" leftmargin="3" bgcolor="#FFFFFF"><form action="/search/" method="get" target="_top">
 <a name="top"></a>
 <table width="760" cellpadding="0" cellspacing="0" border="0">
@@ -130,7 +118,7 @@ dc.cookie='he=llo; path=/; expires='+ date_ob.toGMTString();} // -->
 </tbody></table>
 <table width="760" cellpadding="0" cellspacing="0" border="0">
 <tbody><tr><td height="18" bgcolor="#EEEFF0" align="center" style="font-family:Arial;">
-<font style="color:b22222;font-size:8pt"><b>New York</b></font> <font style="color:3E6097;font-size:8pt">Mon Dec 12</font> <font style="color:3E6097;font-size:8pt">8:07</font>&nbsp;<font style="color:green;font-size:10pt">|</font>&nbsp;<font style="color:b22222;font-size:8pt"><b>Los Angeles</b></font> <font style="color:3E6097;font-size:8pt">Mon Dec 12</font> <font style="color:3E6097;font-size:8pt">5:07</font>&nbsp;<font style="color:green;font-size:10pt">|</font>&nbsp;<font style="color:b22222;font-size:8pt"><b>London</b></font> <font style="color:3E6097;font-size:8pt">Mon Dec 12</font> <font style="color:3E6097;font-size:8pt">13:07</font>&nbsp;<font style="color:green;font-size:10pt">|</font>&nbsp;<font style="color:b22222;font-size:8pt"><b>Moscow</b></font> <font style="color:3E6097;font-size:8pt">Mon Dec 12</font> <font style="color:3E6097;font-size:8pt">16:07</font>&nbsp;<font style="color:green;font-size:10pt">|</font>&nbsp;<font style="color:b22222;font-size:8pt"><b>Tokyo</b></font> <font style="color:3E6097;font-size:8pt">Mon Dec 12</font> <font style="color:3E6097;font-size:8pt">22:07</font></td></tr>
+<font style="color:b22222;font-size:8pt"><b>New York</b></font> <font style="color:3E6097;font-size:8pt">Thu Jun 15</font> <font style="color:3E6097;font-size:8pt">6:20</font>&nbsp;<font style="color:green;font-size:10pt">|</font>&nbsp;<font style="color:b22222;font-size:8pt"><b>Los Angeles</b></font> <font style="color:3E6097;font-size:8pt">Thu Jun 15</font> <font style="color:3E6097;font-size:8pt">3:20</font>&nbsp;<font style="color:green;font-size:10pt">|</font>&nbsp;<font style="color:b22222;font-size:8pt"><b>London</b></font> <font style="color:3E6097;font-size:8pt">Thu Jun 15</font> <font style="color:3E6097;font-size:8pt">11:20</font>&nbsp;<font style="color:green;font-size:10pt">|</font>&nbsp;<font style="color:b22222;font-size:8pt"><b>Moscow</b></font> <font style="color:3E6097;font-size:8pt">Thu Jun 15</font> <font style="color:3E6097;font-size:8pt">14:20</font>&nbsp;<font style="color:green;font-size:10pt">|</font>&nbsp;<font style="color:b22222;font-size:8pt"><b>Tokyo</b></font> <font style="color:3E6097;font-size:8pt">Thu Jun 15</font> <font style="color:3E6097;font-size:8pt">20:20</font></td></tr>
 <tr><td height="1" bgcolor="Black"><spacer height="1" type="block"></spacer></td></tr>
 </tbody></table>
 <img src="/images/placer.gif" height="2" border="0"><table cellspacing="0" cellpadding="4" border="0" width="755">
@@ -139,7 +127,7 @@ dc.cookie='he=llo; path=/; expires='+ date_ob.toGMTString();} // -->
 <center><script language="javascript"><!--
 document.write('<scr'+'ipt language=javascript src="http://a.tribalfusion.com/j.ad?site=NewsZoomcom&adSpace=ROS&size=468x60&type=horiz&requestID='+((new Date()).getTime() % 2147483648) + Math.random()+'"></scr'+'ipt>');
 //-->
-</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=NewsZoomcom&amp;adSpace=ROS&amp;size=468x60&amp;type=horiz&amp;requestID=20473507150.6216035614648978"></script>
+</script><script language="javascript" src="http://a.tribalfusion.com/j.ad?site=NewsZoomcom&amp;adSpace=ROS&amp;size=468x60&amp;type=horiz&amp;requestID=20473503990.27430058097051435"></script>
 <noscript>
    <a href="http://a.tribalfusion.com/i.click?site=NewsZoomcom&adSpace=ROS&size=468x60&requestID=834098006" target=_blank>
    <img src="http://a.tribalfusion.com/i.ad?site=NewsZoomcom&adSpace=ROS&size=468x60&requestID=834098006" 
@@ -446,7 +434,7 @@ To report illegal content please:
 <table border="0" cellpadding="2" cellspacing="1" width="100%" bgcolor="#C1CAD7">
 <tbody><tr><td bgcolor="#F9F9F9" align="left" style="font-size:12px;">
 &nbsp;&nbsp;&nbsp;<h2>Hot News Topics</h2><br>
-<font style="color:CC6600;font-family:Arial;font-size:14px;">»</font> <a class="menu" href="/search/latest/jennifer-aniston/news/" target="_top">Jennifer Aniston News</a><br><font style="color:CC6600;font-family:Arial;font-size:14px;">»</font> <a class="menu" href="/search/latest/mariah-carey/news/" target="_top">Mariah Carey News</a><br><font style="color:CC6600;font-family:Arial;font-size:14px;">»</font> <a class="menu" href="/search/latest/america's-next-top-model/news/" target="_top">America's Next Top Model News</a><br><font style="color:CC6600;font-family:Arial;font-size:14px;">»</font> <a class="menu" href="/search/latest/christmas/news/" target="_top">Christmas News</a><br><font style="color:CC6600;font-family:Arial;font-size:14px;">»</font> <a class="menu" href="/search/latest/eminem/news/" target="_top">Eminem News</a><br><font style="color:CC6600;font-family:Arial;font-size:14px;">»</font> <a class="menu" href="/search/latest/jessica-simpson/news/" target="_top">Jessica Simpson News</a><br><font style="color:CC6600;font-family:Arial;font-size:14px;">»</font> <a class="menu" href="/search/latest/britney-spears/news/" target="_top">Britney Spears News</a><br><font style="color:CC6600;font-family:Arial;font-size:14px;">»</font> <a class="menu" href="/search/latest/50-cent/news/" target="_top">50 Cent News</a><br><font style="color:CC6600;font-family:Arial;font-size:14px;">»</font> <a class="menu" href="/search/latest/chris-brown/news/" target="_top">Chris Brown News</a><br><font style="color:CC6600;font-family:Arial;font-size:14px;">»</font> <a class="menu" href="/search/latest/wwe/news/" target="_top">WWE News</a><br><font style="color:CC6600;font-family:Arial;font-size:14px;">»</font> <a class="menu" href="/search/latest/lindsay-lohan/news/" target="_top">Lindsay Lohan News</a><br><font style="color:CC6600;font-family:Arial;font-size:14px;">»</font> <a class="menu" href="/search/latest/green-day/news/" target="_top">Green Day News</a><br><font style="color:CC6600;font-family:Arial;font-size:14px;">»</font> <a class="menu" href="/search/latest/john-lennon/news/" target="_top">John Lennon News</a><br><font style="color:CC6600;font-family:Arial;font-size:14px;">»</font> <a class="menu" href="/search/latest/nelly/news/" target="_top">Nelly News</a><br><font style="color:CC6600;font-family:Arial;font-size:14px;">»</font> <a class="menu" href="/search/latest/stanley-tookie-williams/news/" target="_top">Stanley Tookie Williams News</a><br><center><a href="/inc/hot-searches/code.html" target="_blank" style="font-size:13px;color:#a0522d;font-family:tahoma;font-weight:bold;">Put the above headlines to your website for free</a></center>
+<font style="color:CC6600;font-family:Arial;font-size:14px;">»</font> <a class="menu" href="/search/latest/world-cup-2006/news/" target="_top">World Cup 2006 News</a><br><font style="color:CC6600;font-family:Arial;font-size:14px;">»</font> <a class="menu" href="/search/latest/national-hurricane-center/news/" target="_top">National Hurricane Center News</a><br><font style="color:CC6600;font-family:Arial;font-size:14px;">»</font> <a class="menu" href="/search/latest/wwe/news/" target="_top">WWE News</a><br><font style="color:CC6600;font-family:Arial;font-size:14px;">»</font> <a class="menu" href="/search/latest/fifa/news/" target="_top">FIFA News</a><br><font style="color:CC6600;font-family:Arial;font-size:14px;">»</font> <a class="menu" href="/search/latest/paris-hilton/news/" target="_top">Paris Hilton News</a><br><font style="color:CC6600;font-family:Arial;font-size:14px;">»</font> <a class="menu" href="/search/latest/ben-roethlisberger/news/" target="_top">Ben Roethlisberger News</a><br><font style="color:CC6600;font-family:Arial;font-size:14px;">»</font> <a class="menu" href="/search/latest/wikipedia/news/" target="_top">Wikipedia News</a><br><font style="color:CC6600;font-family:Arial;font-size:14px;">»</font> <a class="menu" href="/search/latest/shakira/news/" target="_top">Shakira News</a><br><font style="color:CC6600;font-family:Arial;font-size:14px;">»</font> <a class="menu" href="/search/latest/britney-spears/news/" target="_top">Britney Spears News</a><br><font style="color:CC6600;font-family:Arial;font-size:14px;">»</font> <a class="menu" href="/search/latest/runescape/news/" target="_top">RuneScape News</a><br><font style="color:CC6600;font-family:Arial;font-size:14px;">»</font> <a class="menu" href="/search/latest/rihanna/news/" target="_top">Rihanna News</a><br><font style="color:CC6600;font-family:Arial;font-size:14px;">»</font> <a class="menu" href="/search/latest/nba/news/" target="_top">NBA News</a><br><font style="color:CC6600;font-family:Arial;font-size:14px;">»</font> <a class="menu" href="/search/latest/limewire/news/" target="_top">Limewire News</a><br><font style="color:CC6600;font-family:Arial;font-size:14px;">»</font> <a class="menu" href="/search/latest/beyonce-knowles/news/" target="_top">Beyonce Knowles News</a><br><font style="color:CC6600;font-family:Arial;font-size:14px;">»</font> <a class="menu" href="/search/latest/angelina-jolie/news/" target="_top">Angelina Jolie News</a><br><center><a href="/inc/hot-searches/code.html" target="_blank" style="font-size:13px;color:#a0522d;font-family:tahoma;font-weight:bold;">Put the above headlines to your website for free</a></center>
 </td></tr>
 </tbody></table>
 <img src="/images/placer.gif" height="4" border="0"><table border="0" cellpadding="2" cellspacing="1" width="100%" bgcolor="#C1CAD7">
@@ -478,7 +466,7 @@ To report illegal content please:
 </td></tr>
 </tbody></table><img src="/images/placer.gif" height="4" border="0"><table border="0" cellpadding="5" cellspacing="1" width="100%" bgcolor="#C1CAD7">
 <tbody><tr><td bgcolor="#F9F9F9" align="center">
-<img src="/images/adhead.gif" border="0"><br>
+<font size="-2">ADVERTISEMENT</font><br>
 <!-- FASTCLICK.COM 120x600 and 160x600 SkyScraper CODE for newszoom.com -->
 <script language="javascript" src="http://media.fastclick.net/w/get.media?sid=23233&amp;m=3&amp;tp=7&amp;d=j&amp;t=n"></script>
 <noscript><a href="http://media.fastclick.net/w/click.here?sid=23233&m=3&c=1" target="_blank">
@@ -488,17 +476,29 @@ width=160 height=600 border=1></a></noscript>
 </td></tr></tbody></table>
 <!-- MAIN --></td></tr><tr>
 <td align="center" colspan="4" height="110" width="100%" style="font-family:verdana;font-size:10px;color:a7a7a7;">
-<font color="#ffffff">.</font><p><br></p><p><img src="/images/adhead.gif" border="0"><br>
-<!-- ADBANNER -->
-<iframe src="/inc/burst-468x60-bscroll.html" width="468" height="60" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="NO"></iframe>
-<!-- ADBANNER END -->
+<font color="#ffffff">.</font><p><br></p><p><font size="-2">ADVERTISEMENT</font><br>
+<script type="text/javascript"><!--
+google_ad_client = "pub-2105863046651131";
+google_ad_width = 468;
+google_ad_height = 60;
+google_ad_format = "468x60_as";
+google_ad_type = "text_image";
+google_ad_channel ="";
+google_color_border = "336699";
+google_color_bg = "FFFFFF";
+google_color_link = "0000FF";
+google_color_url = "008000";
+google_color_text = "000000";
+//--></script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
 </p><p>
 <a href="/latest/news/1/topstories/" target="_top" style="font-family:verdana">Top Stories</a> | <a href="/latest-news/world/" target="_top" style="font-family:verdana">World</a> | <a href="/latest-news/us/" target="_top" style="font-family:verdana">US</a> | <a href="/latest-news/business/" target="_top" style="font-family:verdana">Business</a> | 
 <a href="/latest-news/sci-Tech/" target="_top" style="font-family:verdana">Sci-Tech</a> | <a href="/latest-news/sports/" target="_top" style="font-family:verdana">Sports</a> | <a href="/latest-news/entertainment/" target="_top" style="font-family:verdana">Entertainment</a> | 
 <a href="/latest-news/health/" target="_top" style="font-family:verdana">Health</a>
 <br>
 News Headlines are derived from different resources and none are affiliated with NewsZoom.com<br>
-Copyright © 2003 - 2005 NewsZoom.com. All Rights Reserved.</p><center>
+Copyright © 2003 - 2006 NewsZoom.com. All Rights Reserved.</p><center>
 <font size="1" color="white">
 <a target="_blank" href="http://w.extreme-dm.com/?login=nzoom">
 <img src="http://w1.extreme-dm.com/i.gif" height="1" border="0" width="1" alt=""></a><script language="javascript1.2"><!--
@@ -526,10 +526,6 @@ document.writeln('<scr'+'ipt language="javascript" src="http://code.fastclick.ne
 </script><script language="javascript" src="http://code.fastclick.net/is.js"></script>
 
 <!-- FASTCLICK.COM GLOBAL INTERSTITIAL CODE for newszoom.com -->
-
-<script>
-document.write('<SCR'+'IPT src=http://www.burstnet.com/cgi-bin/ads/ad10660a.cgi/sz=0X0MN/v=1.1Y/' + PageId + '/RETURN-CODE/JS/><\/SCR'+'IPT>');
-</script><script src="http://www.burstnet.com/cgi-bin/ads/ad10660a.cgi/sz=0X0MN/v=1.1Y/706326876537359900/RETURN-CODE/JS/"></script>
 
 
 
