--- a/p/pr/pro/propertyworld.com.html
+++ b/p/pr/pro/propertyworld.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the propertyworld.com privacy policy that was archived on 2005-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20051230114937id_/http%3A//www.propertyworld.com/privacy.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the propertyworld.com privacy policy that was archived on 2006-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20060615102901id_/http%3A//propertyworld.com/privacy.cfm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 	
@@ -141,9 +141,9 @@ PropertyWorld is committed to protecting the privacy of our users and contributo
 								&nbsp;|&nbsp;
 								<a class="footerText" href="/links.cfm">Useful Links</a>
 								&nbsp;|&nbsp;
-								<a href="/datafeeds.cfm" class="footerText" target="_blank">Property Data Feeds</a>
+								<a href="/datafeeds.cfm" class="footerText">Property Data Feeds</a>
 								&nbsp;|&nbsp;
-								<a href="/listings" class="footerText" target="_blank">Property Listings</a>
+								<a href="/listings" class="footerText">Property Listings</a>
 								&nbsp;|&nbsp;
 								<a href="/sitemap" class="footerText">Site Map</a>
 								&nbsp;|&nbsp;
@@ -156,7 +156,7 @@ PropertyWorld is committed to protecting the privacy of our users and contributo
 						</tr>
 						<tr>
 							<td style="padding-left:9px;width:50%;height:10px;padding-top:4px;padding-bottom:8px;" class="footertextonly">
-								Copyright © 2005 <a class="footerText" href="http://www.propertyworld.com">PropertyWorld.com</a>
+								Copyright © 2005 - 2006 <a class="footerText" href="http://www.propertyworld.com">PropertyWorld.com</a>
 							</td>
 							<td style="padding-right:10px;width:50%;height:10px;padding-top:4px;padding-bottom:8px;" align="right" class="footertextonly">
 								Designed and developed by <a href="http://www.mso.net" class="footerText" target="_blank">MSO.net</a>
